Add Java keystore/truststore generator